src/objects/ConnectorType__c.object
<CustomObject>
    <fields>
        <fullName>AuthorizationEndpoint__c</fullName>
        <label>Authorization Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallbackURL__c</fullName>
        <label>Callback URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraUrlParameters__c</fullName>
        <label>Extra Url Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RedirectUri__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TokenEndpoint__c</fullName>
        <label>Token Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Connector Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connector Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connector Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>